🔨 vscode設定の更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 {
     "cSpell.words": [
+        "Irecv",
+        "Isend",
         "sysp",
         "xppl",
         "yppl"
-    ]
+    ],
+    "files.associations": {
+        "ostream": "cpp"
+    }
 }
