--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.words": [
+        "ckpt",
         "jmex",
         "jmey",
+        "sddtimer",
         "smpl",
         "sysp",
+        "tconf",
         "Wunused",
         "xppl",
         "yppl"
